Revert "Added lobbyName as parameter to edit lobby operation.  Added vote cou…"
